--- a/index.html
+++ b/index.html
@@ -343,20 +343,20 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Books</li>
-            <li data-filter=".filter-card">Flyers/Posters</li>
-            <li data-filter=".filter-web">Logos/Other Items</li>
+            <li data-filter=".filter-book">Books</li>
+            <li data-filter=".filter-Poster">Flyers/Posters</li>
+            <li data-filter=".filter-Other">Logos/Other Items</li>
           </ul>
         </div>
       </div>
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-book">
           <div class="portfolio-wrap">
-            <img src="assets/img/mbdbook_thm.png" class="img-fluid" alt="">
+            <img src="assets/thumbs/MCKBD.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>BOOK 1</h4>
+              <h4>Brandguide Book</h4>
               <p>Book</p>
               <div class="portfolio-links">
                 <a href="assets/portfolio/for_github/Brandguidebook.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
@@ -366,25 +366,11 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-book">
           <div class="portfolio-wrap">
-            <img src="assets/logo/navlogo.png" class="img-fluid" alt="">
+            <img src="assets/thumbs/comp.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>ITEM 1</h4>
-              <p>Item</p>
-              <div class="portfolio-links">
-                <a href="assets/logo/logo_2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/comp_thm.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>BOOK 2</h4>
+              <h4>Design Fundamentals</h4>
               <p>Book</p>
               <div class="portfolio-links">
                 <a href="assets/portfolio/for_github/COM_LAY.final.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
@@ -395,95 +381,151 @@
         </div>
 
 <!-- One set of slid show beginning -->
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <img src="assets/img/masq_thm.png" class="img-fluid" alt="">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
+            <img src="assets/thumbs/masq.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>POSTER 1</h4>
+              <h4>Event Poster</h4>
               <p>Poster</p>
               <div class="portfolio-links">
                 <a href="assets/portfolio/for_github/MASQ.pdf" target="_blank"><i class="bx bx-plus"></i></a>
-                
-              </div>
+                </div>
             </div>
           </div>
         </div>
 
 <!-- End of the slid show -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+<div class="col-lg-4 col-md-6 portfolio-item filter-book">
+  <div class="portfolio-wrap">
+    <img src="assets/thumbs/mdrn_dsgn.png" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>Design Fundamentals</h4>
+      <p>Book</p>
+      <div class="portfolio-links">
+        <a href="assets/portfolio/for_github/modern_design.pdf" target="_blank"><i class="bx bx-plus"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-book">
           <div class="portfolio-wrap">
-            <img src="assets/img/fun.png" class="img-fluid" alt="">
+            <img src="assets/thumbs/ire.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>BOOK 3</h4>
+              <h4>Travel Itinerary</h4>
               <p>Book</p>
               <div class="portfolio-links">
-                <a href="assets/portfolio/for_github/modern_design.pdf" target="_blank"><i class="bx bx-plus"></i></a>
-               
+                <a href="assets/portfolio/for_github/Itinerary Map IRELAND.pdf" target="_blank"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/thumbs/modern_villa.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
+              <h4>Magazine Cover</h4>
+              <p>Other</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/portfolio/for_github/mrv.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-book">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <img src="assets/thumbs/pei.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>ITEM 1</h4>
-              <p>Item</p>
+              <h4>Tri-fold Brochure</h4>
+              <p>Book</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/portfolio/for_github/brochure.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-book">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="assets/thumbs/qube.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>BOOK 1</h4>
-              <p>Books</p>
+              <h4>Menu</h4>
+              <p>Book</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/portfolio/for_github/OFFICIAL_QUBE_MENU.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+            <img src="assets/thumbs/Untitled-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
+              <h4>Birthday Card</h4>
+              <p>Other</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/thumbs/Untitled-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
-
       </div>
 
+      <div class="col-lg-4 col-md-6 portfolio-item filter-book">
+        <div class="portfolio-wrap">
+          <img src="assets/thumbs/rio.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Travel Brochure Booklet</h4>
+            <p>Book</p>
+            <div class="portfolio-links">
+              <a href="assets/portfolio/for_github/rio.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+            </div>
+          </div>
+        </div>
     </div>
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-book">
+      <div class="portfolio-wrap">
+        <img src="assets/thumbs/root.png" class="img-fluid" alt="">
+        <div class="portfolio-info">
+          <h4>Brand Guidebook</h4>
+          <p>Book</p>
+          <div class="portfolio-links">
+            <a href="assets/portfolio/for_github/rootsbrandgB.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+    <img src="assets/portfolio/for_github/qube_logo.ai" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>Logo</h4>
+      <p>Other</p>
+      <div class="portfolio-links">
+        <a href="assets/portfolio/for_github/qube.png" target="_blank"><i class="bx bx-plus"></i></a>
+        </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+  <img src="assets/thumbs/CARRT.png" class="img-fluid" alt="">
+  <div class="portfolio-info">
+    <h4>Logo</h4>
+    <p>Other</p>
+    <div class="portfolio-links">
+      <a href="assets/portfolio/for_github/video-1652651992.mp4" target="_blank"><i class="bx bx-plus"></i></a>
+      </div>
+  </div>
+</div>
+</div>
+
   </section><!-- End Portfolio Section -->
 
   <!-- ======= Contact Section ======= -->
