--- a/index.html
+++ b/index.html
@@ -294,8 +294,6 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Graphic Resume <span></span></h3>
           <!-- Replace 'your_resized_resume.png' with the actual filename of your resized image -->
-          <img src="assets/portfolio/for_github/graphic_resume.png" alt="Resume Image" width="500" height="700">
-          <div class="resume-item pb-0">
             <h4>Brian MacAdam aka. Mack B</h4>
             <ul>
               <li>Vancouver, BC Canada</li>
@@ -363,7 +361,7 @@
           </div>
 
           <!-- Portfolio Item 2 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-book">
             <div class="portfolio-wrap">
               <img src="assets/thumbs/comp.png" class="img-fluid" alt="Design Fundamentals">
               <div class="portfolio-info">
@@ -377,7 +375,7 @@
           </div>
 
           <!-- Portfolio Item 3 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-book">
             <div class="portfolio-wrap">
               <img src="assets/thumbs/mdrn_dsgn.png" class="img-fluid" alt="Design Fundamentals">
               <div class="portfolio-info">
@@ -391,7 +389,7 @@
           </div>
 
           <!-- Portfolio Item 4 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-book">
             <div class="portfolio-wrap">
               <img src="assets/thumbs/ire.png" class="img-fluid" alt="Travel Itinerary">
               <div class="portfolio-info">
@@ -406,7 +404,7 @@
           </div>
 
           <!-- Portfolio Item 5 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-book">
             <div class="portfolio-wrap">
               <img src="assets/thumbs/modern_villa.png" class="img-fluid" alt="Magazine Cover">
               <div class="portfolio-info">
@@ -421,7 +419,7 @@
           </div>
 
           <!-- Portfolio Item 6 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
             <div class="portfolio-wrap">
               <img src="assets/thumbs/pei.png" class="img-fluid" alt="Tri-fold Brochure">
               <div class="portfolio-info">
@@ -449,6 +447,62 @@
             </div>
           </div>
        
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/thumbs/Untitled-1.png" class="img-fluid" alt="RPG">
+              <div class="portfolio-info">
+                <h4>Birthday Card</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+                  <a href="assets/portfolio/for_github/card.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/thumbs/qube.png" class="img-fluid" alt="RPG">
+              <div class="portfolio-info">
+                <h4>Menu</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+                  <a href="assets/portfolio/for_github/qube.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-book">
+            <div class="portfolio-wrap">
+              <img src="assets/thumbs/root.png" class="img-fluid" alt="RPG">
+              <div class="portfolio-info">
+                <h4>JRPG Tech Demo</h4>
+                <p>Book</p>
+                <div class="portfolio-links">
+                  <a href="assets/portfolio/for_github/rootsbrandgB.pdf" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/thumbs/rio.png" class="img-fluid" alt="RPG">
+              <div class="portfolio-info">
+                <h4>Brochure</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+                  <a href="assets/portfolio/for_github/rio.pdf" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
       </div>
     </section><!-- End Portfolio Section -->
 
