--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link rel="stylesheet" href="https://use.typekit.net/ymr7axx.css">
+  <!--Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/nbc7hlb.css">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,13 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal - v4.5.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
+ </head>
 
 <body>
 
@@ -293,7 +287,7 @@
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Graphic Resume <span></span></h3>
+          <h3 class="resume-title">Resume <span></span></h3>
           <!-- Replace 'your_resized_resume.png' with the actual filename of your resized image -->
             <h4>Brian MacAdam aka. Mack B</h4>
             <ul>
@@ -427,8 +421,8 @@
                 <h4>Tri-fold Brochure</h4>
                 <p>Book</p>
                 <div class="portfolio-links">
-                  <a href="assets/portfolio/for_github/brochure.pdf" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/portfolio/for_github/brochure.pdf" target="_blank"><i
+                    class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -469,8 +463,8 @@
                 <h4>Menu</h4>
                 <p>Other</p>
                 <div class="portfolio-links">
-                  <a href="assets/portfolio/for_github/qube.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/portfolio/for_github/OFFICIAL_QUBE_MENU.pdf"  target="_blank"><i
+                    class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -483,8 +477,8 @@
                 <h4>JRPG Tech Demo</h4>
                 <p>Book</p>
                 <div class="portfolio-links">
-                  <a href="assets/portfolio/for_github/rootsbrandgB.pdf" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/portfolio/for_github/rootsbrandgB.pdf"  target="_blank"><i
+                    class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -497,79 +491,44 @@
                 <h4>Brochure</h4>
                 <p>Other</p>
                 <div class="portfolio-links">
-                  <a href="assets/portfolio/for_github/rio.pdf" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/portfolio/for_github/rio.pdf"  target="_blank"><i
+                    class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-      </div>
-    </section><!-- End Portfolio Section -->
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>Contact Me</p>
-        </div>
-
-        <div class="row mt-2">
-
-          <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
-            <div class="info-box">
-              <i class="bx bx-share-alt"></i>
-              <h3>Social Profiles</h3>
-              <div class="social-links">
-                <a href="http://www.instagram.com/mack.awesome/" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.youtube.com/@Mack_B//" class="google-plus"><i class="bi bi-skype"></i></a>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/thumbs/music1.png" class="img-fluid" alt="RPG">
+              <div class="portfolio-info">
+                <h4>Album Cover</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+                  <a href="assets/portfolio/for_github/MUSIC.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 mt-4 d-flex align-items-stretch">
-            <div class="info-box">
-              <i class="bx bx-envelope"></i>
-              <h3>Email Me</h3>
-              <p>brian.macadam1@gmail.com</p>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/thumbs/music2.png" class="img-fluid" alt="RPG">
+              <div class="portfolio-info">
+                <h4>Concert Poster</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+                  <a href="assets/portfolio/for_github/MUSIC2.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-md-6 mt-4 d-flex align-items-stretch">
-            <div class="info-box">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Me</h3>
-              <p>+19023880933</p>
-            </div>
-          </div>
-        </div>
-
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
-          <div class="row">
-            <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-            </div>
-            <div class="col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-            </div>
-          </div>
-          <div class="form-group mt-3">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-          </div>
-          <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-          </div>
-          <div class="my-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your input is appreciated.</div>
-          </div>
-          <div class="text-center"><button type="submit">Fire away!</button></div>
-        </form>
-
       </div>
-    </section><!-- End Contact Section -->
+    </section><!-- End Portfolio Section -->
+
+    
 
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
