--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
+
+
+  console.error('Error parsing JSON:', err);
+}
+
+  console.error('Error parsing JSON:', err);
+
+  console.error('Error parsing JSON:', err);
+
 <head>
+  <meta charset="UTF-8">
+  <title>Page Title</title>
+</head>
+
+
+</head>
+
+
+</head>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -35,16 +54,18 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+      background: rgba(0,
+      0,
+      0,
+      0.5); /* Semi-transparent black overlay */
     }
-
     /* Additional styles for your content go here */
 
     @media (max-width: 768px) {
       #background-video {
         display: none; /* Hide video on mobile */
-      }
-    }
+  }}
+}}
   </style>
 </head>
 
@@ -128,7 +149,7 @@
           <div class="col-lg-6">
             <ul>
               <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                <span>https://mckbdsgn.github.io/portfolio/</span></li>
+                <span>https: //mckbdsgn.github.io/portfolio/</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+19023880933</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vancouver, BC Canada</span></li>
             </ul>
@@ -188,21 +209,51 @@
     </div>
   </div>
 
-  <style>
-    .portfolio-links a:hover img {
-      transform: scale(1.1); /* Scale the image on hover */
-      filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5)); /* Add drop shadow */
-    }
+The issue with the provided code is that the @keyframes animation "shimmer" is not being used anywhere. It is defined but not applied to any elements.
 
-    @keyframes shimmer {
-      0% {
-        background-position: -200% 0;
-      }
-      100% {
-        background-position: 200% 0;
-      }
-    }
-  </style>
+To fix this, we need to:
+
+1. Add the "shimmer" animation to the div that creates the shimmer effect in the portfolio image links:
+
+<div style="
+  animation: shimmer 1s infinite; 
+">
+
+2. Set the opacity to 1 so the shimmer effect is visible: 
+
+opacity: 1;
+
+The updated code would be:
+
+<style>
+.portfolio-links a:hover img {
+  transform: scale(1.1); /* Scale the image on hover */
+  filter: drop-shadow(0 0 10px rgba(0,
+  0,
+  0,
+  0.5)); /* Add drop shadow */
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+</style>
+
+<a href="...">
+  <img ...>
+  
+  <div style="
+    animation: shimmer 1s infinite; 
+    opacity: 1;
+  ">
+</a>
+
+This will make the "shimmer" animation run on the div when the portfolio image links are hovered over.
 
 
 
@@ -493,8 +544,8 @@
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
       <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
+      <!-- Licensing information: https: //bootstrapmade.com/license/ -->
+      <!-- Purchase the pro version with working PHP/AJAX contact form: https: //bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
       by MACK B Design co.
     </div>
 
