--- a/index.html
+++ b/index.html
@@ -29,38 +29,33 @@
       overflow: auto; /* Prevent scrollbars from appearing */
     }
 
-    #background-video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* Cover the entire viewport */
-      z-index: -1;
-    }
+    <style>
+      
+  #background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Cover the entire viewport */
+    z-index: -1;
+  }
 
-    .content-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,
-      0,
-      0,
-      0.5); /* Semi-transparent black overlay */
-    }
-   
-    @media (max-width: 768px) {
-      #background-video {
-        display: none; /* Hide video on mobile */
-  }}  </style>
-  <!-- Background Video -->
-  <video autoplay muted loop id="background-video">
-    <source src="assets/img/bck.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  .content-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  }
+</style>
 
+<!-- Background Image (GIF) -->
+<img src="assets/img/bck.gif" id="background-image" alt="Background Image">
+
+<!-- Overlay -->
+<div class="content-overlay"></div>
   <!-- Content Overlay -->
   <div class="content-overlay">
     <!-- Your website content goes here -->
