--- a/index.html
+++ b/index.html
@@ -24,40 +24,41 @@
   <link rel="stylesheet" href="https://use.typekit.net/nbc7hlb.css">
 
   <style>
-    body {
-      margin: 0;
-      overflow: auto; /* Prevent scrollbars from appearing */
-    }
+  body {
+    margin: 0;
+    overflow: auto; /* Prevent scrollbars from appearing */
+  }
 
-    style>
-    /* Add this style for the contact form lightbox */
-    .lightbox {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-      color: white;
-    }
+  /* Add this style for the contact form lightbox */
+  .lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    color: white;
+  }
 
-    .contact-form {
-      background: black;
-      padding: 20px;
-      border-radius: 5px;
-      text-align: center;
-    }
+  .contact-form {
+    background: black;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+  }
 
-    .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      cursor: pointer;
-    }
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+</style>
+
   </style></head>
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -96,6 +97,7 @@
     <li><a class="nav-link" href="#about">About</a></li>
     <li><a class="nav-link" href="#resume">Resume</a></li>
     <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+    <li><a class="nav-link" href="#dreamhowl">Game Dev</a></li>
   </ul>
   
   <i class="bi bi-list mobile-nav-toggle"></i>
@@ -488,7 +490,13 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    
+    <section id="dreamhowl-container">
+      <div id="dreamhowl" class="dreamhowl-section">
+          <h2>DreamHowl Section</h2>
+          <p>This is your DreamHowl section content.</p>
+          <!-- Add more content as needed -->
+      </div>
+  </section>
 
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
